compiler/tests/success/x86-64/arr_init_param.jazz
param int size = 10;

export fn test() -> reg u64 {
  stack u64[size + 2] t;
  inline int i;
  reg u64 r;

  ArrayInit(t);

  for i = 0 to size + 2 {
    t[i] = 0;
  } 
  r = 0;
  for i = 0 to size + 2 {
    r += t[i];
  }
  return r;
}