compiler/tests/fail/array_expansion/x86-64/default_scale_lv_2.jazz
export fn main () -> reg u64 {
  reg u64[4] r;
  reg u64 res;

  inline int i;
  for i = 0 to 4 {
    r[i] = 0;
  }

  r.[0] = 2;
  res = r[0];

  return res;
}
